--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=3000
 DB_CNN=mongodb://localhost:27017/hospitaldb
 JWT_SECRET=hoañliu03u4@asñj!j09jikj23
+
+
+GOOGLE_ID =258958550824-9fg0c5pr96kl0kicqjsfqefmt49ilq7r.apps.googleusercontent.com
+GOOGLE_SECRET=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
